--- a/playlist/package.json
+++ b/playlist/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.0.0",
     "@reduxjs/toolkit": "^2.9.0",
+    "bulma": "^1.0.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0"
